--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kendalls"
 description = "Kendall's tau rank correlation"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["zolkko <zolkko@gmail.com>"]
 
 include = ["src/**/*.rs", "Cargo.toml"]
@@ -21,3 +21,6 @@ travis-ci = { repository = "zolkko/kendalls", branch = "master" }
 codecov = { repository = "zolkko/kendalls", branch = "master", service = "github" }
 
 [dependencies]
+
+[dev-dependencies]
+approx = "0.4"
