--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,11 @@
 [package]
 name = "kendalls"
 description = "Kendall's tau rank correlation"
-version = "0.1.6"
-authors = ["zolkko <zolkko@gmail.com>"]
+version = "0.2.0"
+authors = [
+	"zolkko <zolkko@gmail.com>",
+	"Genaro Camele <genarocamele@gmail.com>"
+]
 
 include = ["src/**/*.rs", "Cargo.toml"]
 
