--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kendalls"
 description = "Kendall's tau rank correlation"
-version = "0.2.0"
+version = "0.2.1"
 authors = [
 	"zolkko <zolkko@gmail.com>",
 	"Genaro Camele <genarocamele@gmail.com>",
@@ -9,15 +9,12 @@ authors = [
 ]
 
 include = ["src/**/*.rs", "Cargo.toml"]
-
 documentation = "https://docs.rs/kendalls/"
 homepage = "https://github.com/zolkko/kendalls"
 repository = "https://github.com/zolkko/kendalls"
-
 readme = "README.md"
 license = "MIT"
-
-keywords = [ "statistics" ]
+keywords = [ "statistics", "correlation" ]
 categories = [ "algorithms", "science" ]
 
 [badges]
