--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ sudo: required
 dist: trusty
 cache: cargo
 script:
+- cargo clippy -- -D warnings
 - cargo test
 - cargo doc --no-deps || echo "skipping cargo doc"
 after_success: |
