--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "kendalls"
 description = "Kendall's tau rank correlation"
-version = "0.2.3"
+version = "1.0.0"
 authors = [
 	"zolkko <zolkko@gmail.com>",
 	"Genaro Camele <genarocamele@gmail.com>",
@@ -17,10 +17,8 @@ readme = "README.md"
 license = "MIT"
 keywords = [ "statistics", "correlation" ]
 categories = [ "algorithms", "science" ]
-
-[[bench]]
-name = "bench"
-harness = false
+edition = "2024"
+rust-version = "1.85.0"
 
 [badges]
 travis-ci = { repository = "zolkko/kendalls", branch = "master" }
@@ -29,7 +27,11 @@ codecov = { repository = "zolkko/kendalls", branch = "master", service = "github
 [dependencies]
 
 [dev-dependencies]
-approx = "0.5"
+float-cmp = "0.10"
 criterion = "0.6"
 rand = "0.9"
 rand_distr = "0.5"
+
+[[bench]]
+name = "bench"
+harness = false
